Bug 1725930 - Make `TextServicesDocument::HasSameBlockNodeParent` refer 2nd text node as expected r=m_kato

This is just a simple mistake, but I'm not sure how this break the callers.
Therefore, I don't have a testcase for this.

Differential Revision: https://phabricator.services.mozilla.com/D122705